// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenu should render menu with no items 1`] = `
<MainMenu
  cssClass="core-nav-section core-padded-row"
  defaultShow={true}
  dropdownCssClass="core-main-menu core-btn btn-primary"
  dropdownMenuCssClass="core-dropdown-menu"
  iconName="mdi mdi-menu"
  menuItems={Array []}
>
  <div
    className="core-nav-section core-padded-row"
  >
    <Dropdown
      defaultShow={true}
      id="main-menu"
      navbar={false}
    >
      <ReactOverlaysDropdown
        itemSelector=".dropdown-item:not(.disabled):not(:disabled)"
        onToggle={[Function]}
        show={true}
      >
        <div
          className="show dropdown"
          id="main-menu"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            className="core-main-menu core-btn btn-primary"
          >
            <Button
              active={false}
              aria-expanded={true}
              aria-haspopup={true}
              className="core-main-menu core-btn btn-primary dropdown-toggle"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-expanded={true}
                aria-haspopup={true}
                className="core-main-menu core-btn btn-primary dropdown-toggle btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="mdi mdi-menu"
                />
              </button>
            </Button>
          </DropdownToggle>
          <DropdownMenu
            alignRight={false}
            className="core-dropdown-menu"
            flip={true}
            id="main-menu-list"
          >
            <div
              aria-labelledby=""
              className="core-dropdown-menu dropdown-menu show"
              id="main-menu-list"
              style={
                Object {
                  "left": "0",
                  "opacity": "0",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "0",
                }
              }
              x-placement="bottom-start"
            />
          </DropdownMenu>
        </div>
      </ReactOverlaysDropdown>
    </Dropdown>
  </div>
</MainMenu>
`;

exports[`MainMenu should render menu with two items separated by divider 1`] = `
<MainMenu
  cssClass="core-nav-section core-padded-row"
  defaultShow={true}
  dropdownCssClass="core-main-menu core-btn btn-primary"
  dropdownMenuCssClass="core-dropdown-menu"
  iconName="mdi mdi-menu"
  menuItems={
    Immutable.List [
      Object {
        "id": 1,
        "text": "First item",
      },
      Object {
        "id": 2,
        "isDivider": true,
      },
      Object {
        "id": 3,
        "text": "Last item",
      },
    ]
  }
>
  <div
    className="core-nav-section core-padded-row"
  >
    <Dropdown
      defaultShow={true}
      id="main-menu"
      navbar={false}
    >
      <ReactOverlaysDropdown
        itemSelector=".dropdown-item:not(.disabled):not(:disabled)"
        onToggle={[Function]}
        show={true}
      >
        <div
          className="show dropdown"
          id="main-menu"
          onKeyDown={[Function]}
        >
          <DropdownToggle
            className="core-main-menu core-btn btn-primary"
          >
            <Button
              active={false}
              aria-expanded={true}
              aria-haspopup={true}
              className="core-main-menu core-btn btn-primary dropdown-toggle"
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              <button
                aria-expanded={true}
                aria-haspopup={true}
                className="core-main-menu core-btn btn-primary dropdown-toggle btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="mdi mdi-menu"
                />
              </button>
            </Button>
          </DropdownToggle>
          <DropdownMenu
            alignRight={false}
            className="core-dropdown-menu"
            flip={true}
            id="main-menu-list"
          >
            <div
              aria-labelledby=""
              className="core-dropdown-menu dropdown-menu show"
              id="main-menu-list"
              style={
                Object {
                  "left": "0",
                  "opacity": "0",
                  "pointerEvents": "none",
                  "position": "absolute",
                  "top": "0",
                }
              }
              x-placement="bottom-start"
            >
              <HotkeyedMenuItem
                divider={false}
                hotkey=""
                key="1"
                onClick={[Function]}
                title="First item"
              >
                <DropdownItem
                  as={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "displayName": "SafeAnchor",
                      "render": [Function],
                    }
                  }
                  disabled={false}
                  hotkey=""
                  onClick={[Function]}
                  title="First item"
                >
                  <SafeAnchor
                    className="dropdown-item"
                    disabled={false}
                    hotkey=""
                    onClick={[Function]}
                    title="First item"
                  >
                    <a
                      className="dropdown-item"
                      hotkey=""
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      title="First item"
                    >
                      First item
                    </a>
                  </SafeAnchor>
                </DropdownItem>
              </HotkeyedMenuItem>
              <HotkeyedMenuItem
                divider={true}
                hotkey=""
                key="2"
                onClick={[Function]}
              >
                <DropdownDivider
                  role="separator"
                >
                  <div
                    className="dropdown-divider"
                    role="separator"
                  />
                </DropdownDivider>
              </HotkeyedMenuItem>
              <HotkeyedMenuItem
                divider={false}
                hotkey=""
                key="3"
                onClick={[Function]}
                title="Last item"
              >
                <DropdownItem
                  as={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "displayName": "SafeAnchor",
                      "render": [Function],
                    }
                  }
                  disabled={false}
                  hotkey=""
                  onClick={[Function]}
                  title="Last item"
                >
                  <SafeAnchor
                    className="dropdown-item"
                    disabled={false}
                    hotkey=""
                    onClick={[Function]}
                    title="Last item"
                  >
                    <a
                      className="dropdown-item"
                      hotkey=""
                      href="#"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="button"
                      title="Last item"
                    >
                      Last item
                    </a>
                  </SafeAnchor>
                </DropdownItem>
              </HotkeyedMenuItem>
            </div>
          </DropdownMenu>
        </div>
      </ReactOverlaysDropdown>
    </Dropdown>
  </div>
</MainMenu>
`;
